--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 .fs{
     font-family: 'Shantell Sans', cursive;
 }
+.card img{
+    width: 100%;
+    height: 300px;
+}
+.carousel-item img{
+    height: 400px;
+}
